--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
   },
-  "start": "node index.js",
+
   "repository": {
     "type": "git",
     "url": "git@personal:yimryan15/blog-app.git"
